# vdfs4-linux

./: .gitignore  README.md
linux-5.4/fs/vdfs4/: Makefile  authentication.c  bnode.c  btree.h  cattree-helper.c  cattree.c  crypto_wrapper.c  data.c  debug.c  debug.h  decomp_trace.c  decompress.c  extents.c  fsm.c  inode.c  ioctl.c  iowait_debugger.c  kunit-test.c  orphan.c  public_key.h  snapshot.c  super.c  vdfs4.h  vdfs4_layout.h  vdfs_trace.c  xattr.c
linux-5.4/include/crypto/: crypto_wrapper.h
linux-5.4/include/trace/: early.h
linux-5.4/kernel/trace/: early-trace.c
linux/crypto/: crypto_wrapper.c
linux/fs/vdfs4/: Kconfig  bnode.c  btree.c  decomp_trace.h  file.c  (+12 more)
vdfs-tools/: .gitignore  Makefile
vdfs-tools/include/: compress.h  kernel_redef.h  vdfs4.h  vdfs4_layout.h  vdfs_tools.h
vdfs-tools/lib/: btree.c  compress.c  decompress.c  disk_op.c  encrypt.c  snapshot.c  space_manager.c  utils.c
vdfs-tools/mkfs/: mkfs.c  parse_cmd_line.c
vdfs-tools/test/: CMakeLists.txt
vdfs-tools/test/fsck/: CMakeLists.txt  approval_test.cpp  unit_test.cpp
vdfs-tools/test/fsck/ApprovedData/: approval_test.FSCK.ApprovalTest_CategoryNodeDump.approved.txt  approval_test.FSCK.ApprovalTest_ExtentNodeDump.approved.txt  approval_test.FSCK.ApprovalTest_VolumeChecking.approved.txt
vdfs-tools/test/info/: CMakeLists.txt  approval_test.cpp  test_main.cpp  unit_test.cpp
vdfs-tools/test/info/ApprovedData/: approval_test.INFO.ApprovalTest_DirectoryIterate.approved.txt  approval_test.INFO.ApprovalTest_VolumeInfo.approved.txt
vdfs-tools/test/info/SampleData/: systemrw.img  testdir.sqsh
vdfs-tools/test/info/SampleData/testdir/: testfile01  testfile02
vdfs-tools/test/info/SampleData/testdir/subdir02/subsubdir/: randfile
(+5 files in other folders)
